--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="participants-list">
             <div class="participant-row">
                 <input type="text" placeholder="Nom du participant" value="Participant 1">
+                <input type="file" class="face-input" accept="image/*">
                 <button class="remove-participant">×</button>
             </div>
         </div>
