photo, et stockage cookie

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <div id="participants-list">
             <div class="participant-row">
                 <input type="text" placeholder="Nom du participant" value="Participant 1">
+                <img class="face-thumb" src="" alt="" title="Choisir une photo">
                 <input type="file" class="face-input" accept="image/*">
+                <label style="color:#000; font-family: Arial; font-size: 14px;">
+                    <input type="checkbox" class="display-input" checked> Afficher
+                </label>
                 <button class="remove-participant">×</button>
             </div>
         </div>
