--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
     <div id="name-display"></div>
     <script src="https://cdn.jsdelivr.net/npm/three@0.154.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
